<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.TopHitsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_top_hits_activity_description"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_1">

                <TextView
                    android:id="@+id/id_item_1"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_1" />

                <Button
                    android:id="@+id/id_buy_item_1"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_2">

                <TextView
                    android:id="@+id/id_item_2"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_2" />

                <Button
                    android:id="@+id/id_buy_item_2"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_3">

                <TextView
                    android:id="@+id/id_item_3"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_3" />

                <Button
                    android:id="@+id/id_buy_item_3"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_4">

                <TextView
                    android:id="@+id/id_item_4"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_4" />

                <Button
                    android:id="@+id/id_buy_item_4"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_5">

                <TextView
                    android:id="@+id/id_item_5"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_5" />

                <Button
                    android:id="@+id/id_buy_item_5"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_list_item_6">

                <TextView
                    android:id="@+id/id_item_6"
                    style="@style/StyleTopHitsItem"
                    android:text="@string/string_top_6" />

                <Button
                    android:id="@+id/id_buy_item_6"
                    style="@style/StyleBuyButton" />
            </RelativeLayout>

            <include layout="@layout/layout_button_return_search" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
