<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.PlayerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/string_player_activity_description"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/string_current_playing" />

            <TextView
                android:id="@+id/id_found_song"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/string_found_song_example"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/StylePlayerButtons"
                    android:onClick="goToPreviousSong"
                    android:src="@drawable/previous" />

                <ImageButton
                    style="@style/StylePlayerButtons"
                    android:onClick="playSong"
                    android:src="@drawable/play" />

                <ImageButton
                    style="@style/StylePlayerButtons"
                    android:onClick="pauseSong"
                    android:src="@drawable/pause" />

                <ImageButton
                    style="@style/StylePlayerButtons"
                    android:onClick="goToNextSong"
                    android:src="@drawable/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/string_artist"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_found_song_artist"
                    android:textStyle="italic" />
            </LinearLayout>


            <include layout="@layout/layout_button_return_search" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
